# simod-request-status-observer

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
src/simod_request_status_observer/: main.py
